# brush-android

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  spelling_and_links.yml
apps/brush-aar/: Cargo.toml  build.gradle  settings.gradle
apps/brush-aar/src/: lib.rs
apps/brush-app/app/src/main/java/com/splats/app/: FilePicker.java  MainActivity.java
apps/brush-app/src/: android.rs
apps/brush-app/src/ui/: settings_popup.rs  splat_backbuffer.rs
crates/brush-bench-test/src/: benches.rs  reference.rs
crates/brush-bench-test/tests/: finite_diff.rs  fuzz.rs  integration.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: config.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs
crates/brush-process/src/: train_stream.rs
crates/brush-render-bwd/src/: burn_glue.rs
crates/brush-render-bwd/src/kernels/: project_backwards.rs
crates/brush-render/src/: burn_glue.rs  gaussian_splats.rs  lib.rs  render.rs  shaders.rs
crates/brush-render/src/kernels/: helpers.rs  project_forward.rs  project_visible.rs  types.rs
crates/brush-render/src/tests/: mod.rs
crates/brush-train/src/: config.rs  eval.rs  lod.rs  splat_init.rs  train.rs
crates/brush-vfs/src/: data_source.rs
crates/rrfd/src/: android.rs  lib.rs
